added admin pages for visibility, in the process of adding proper course and lecture functionality

--- a/lmsunsw/app/templates/app/course.html
+++ b/lmsunsw/app/templates/app/course.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 
-<form action="{% url 'lecture' %}" method="POST">
+<form action="{% url 'addlecture' %}" method="POST">
     {% csrf_token%}
-    {{ add_course_form.as_ul }}
+    {{ add_lecture_form.as_ul }}
     <input type="submit" value="Submit" />
 </form>
 
