--- a/lmsunsw/app/templates/app/staff.html
+++ b/lmsunsw/app/templates/app/staff.html
@@ -4,6 +4,6 @@
 
 STAFF
 
-<li><a href="{% url 'addcourse' %}">Register</a></li>
+<li><a href="{% url 'addcourse' %}">Add a Course</a></li>
 
 {% endblock %}
