display courses of each lecturer on the course index page

--- a/lmsunsw/app/templates/app/coursedetails.html
+++ b/lmsunsw/app/templates/app/coursedetails.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
+﻿{% extends "app/layout.html" %}
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
+{% block content %}
 
-</body>
-</html>
+
+
+{% endblock %}
