--- a/lmsunsw/app/templates/app/staff.html
+++ b/lmsunsw/app/templates/app/staff.html
@@ -2,8 +2,6 @@
 
 {% block content %}
 
-STAFF
-
-<li><a href="{% url 'addcourse' %}">Add a Course</a></li>
+<li><a href="{% url 'courseindex' %}">Courses Index</a></li>
 
 {% endblock %}
