finished standard mcq feature, expanded on the sidebar list to show indented tabs

--- a/lmsunsw/app/templates/app/index.html
+++ b/lmsunsw/app/templates/app/index.html
@@ -8,9 +8,12 @@
 
 {% block sidebar %}
     <ul class="sidebar-nav">
-        {% for tab in sidebar %}
+        <li>
+            <a href="{% url 'index' %}"> Index </a>
+        </li>
+        {% for lecture in lecture_list %}
             <li>
-                <a href="{% url 'lecture' tab.id tab.get_slug_field %}">{{ tab.lecture_name }}</a>
+                <a href="{% url 'lecture' lecture.id lecture.get_slug_field %}">{{ lecture.lecture_name }}</a>
             </li>
         {% endfor %}
     </ul>
