--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -1,6 +1,12 @@
 {% extends "app/layout.html" %}
+{% load staticfiles %}
 
 {% block content %}
+
+
+
+<button id="understand" type="button">understand</button>
+<button id="dontunderstand" type="button">don't understand</button>
 
 {% endblock %}
 
@@ -15,4 +21,10 @@
             </li>
         {% endfor %}
     </ul>
+{% endblock %}
+
+
+{% block scripts %}
+
+
 {% endblock %}
