--- a/app/static/app/content/site.css
+++ b/app/static/app/content/site.css
@@ -12,6 +12,10 @@ body {
   height: 100%;
 }
 
+.progress {
+  margin-bottom: 0;
+}
+
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
