--- a/app/static/app/content/site.css
+++ b/app/static/app/content/site.css
@@ -93,3 +93,10 @@ iframe {
   height: 100%;
   width: 100%;
 }
+
+/* button in the sidebar */
+
+#confidence-btn {
+  padding-left: 0;
+  padding-right: 0;
+}
