--- a/app/templates/app/lecture.html
+++ b/app/templates/app/lecture.html
@@ -9,32 +9,5 @@
 {% endblock %}
 
 {% block sidebar %}
-    {% for lecture in lecture_list %}
-        <li>
-            <a href="{% url 'lecture' lecture.id lecture.get_slug_field %}">{{ lecture.lecture_name }}</a>
-            {% if lecture.id == current_lecture.id %}
-                <ul>
-                    {% if current_lecture.lecture_slide %}
-                    <li>
-                        <a href="{% url 'lecture_slide' lecture.id lecture.get_slug_field %}">Lecture Slides</a>
-                    </li>
-                    {% endif %}
-                    <li>
-                        <a href="{% url 'thread' lecture.id lecture.get_slug_field %}">Posts</a>
-                    </li>
-                    <!--Quiz sub-list-->
-                    {% if quiz_list %}
-                    <li>
-                        Quizzes
-                    </li>
-                    {% endif %}
-                    {% for quiz in quiz_list %}
-                    <li>
-                        <a href="{% url 'quiz' lecture.id lecture.get_slug_field quiz.id quiz.question %}"> {{ quiz.question }} </a>
-                    </li>
-                    {% endfor %}
-                </ul>
-            {% endif %}
-        </li>
-    {% endfor %}
+    {% include "app/sidebar.html" %}
 {% endblock %}
