--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -1,22 +1,9 @@
 {% extends "app/layout.html" %}
-{% load staticfiles %}
 
 {% block content %}
 
 {% endblock %}
 
 {% block sidebar %}
-
-    {% for lecture in lecture_list %}
-        <li>
-            <a href="{% url 'lecture' lecture.id lecture.get_slug_field %}">{{ lecture.lecture_name }}</a>
-        </li>
-    {% endfor %}
-
-{% endblock %}
-
-
-{% block scripts %}
-
-
+    {% include "app/sidebar.html" %}
 {% endblock %}
